ignore_headers = [
  'bio-gio.h',
  'channel-display-priv.h',
  'channel-usbredir-priv.h',
  'client_sw_canvas.h',
  'continuation.h',
  'coroutine.h',
  'decode.h',
  'desktop-integration.h',
  'display',
  'gio-coroutine.h',
  'giopipe.h',
  'smartcard-manager-priv.h',
  'spice-audio-priv.h',
  'spice-channel-cache.h',
  'spice-channel-priv.h',
  'spice-cmdline.h',
  'spice-common.h',
  'spice-file-transfer-task-priv.h',
  'spice-grabsequence-priv.h',
  'spice-gstaudio.h',
  'spice-gtk-session-priv.h',
  'spice-marshal.h',
  'spice-pulse.h',
  'spice-session-priv.h',
  'spice-uri-priv.h',
  'spice-util-priv.h',
  'spice-widget-priv.h',
  'spicy-connect.h',
  'usb-acl-helper.h',
  'usb-device-manager-priv.h',
  'usbdk_api.h',
  'usbutil.h',
  'vmcstream.h',
  'vncdisplaykeymap.h',
  'win-usb-dev.h',
]

spice_gtk_doc_dep = declare_dependency(link_with : [spice_client_gtk_lib, spice_client_glib_lib])

gnome.gtkdoc('spice-gtk',
             content_files : ['spice-gtk-overrides.txt', 'spice-gtk-overrides.txt'],
             dependencies : spice_gtk_doc_dep,
             main_xml : 'spice-gtk-docs.xml',
             gobject_typesfile : files('spice-gtk.types'),
             ignore_headers : ignore_headers,
             include_directories: spice_gtk_include,
             c_args : '-DSPICE_COMPILATION',
             install : true,
             scan_args : ['--deprecated-guards="SPICE_DISABLE_DEPRECATED"', '--ignore-decorators="G_GNUC_INTERNAL"'],
             src_dir : join_paths(meson.source_root(), 'src'))
